[package]
name = "tzf"
version = "0.1.0"
edition = "2021"
authors = ["Kevin McCormack <kevin@mccormack.tech>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
magnus = { version = "0.8" }
tzf-rs = { version = "1.0.1", default-features = false }
rb-sys = { version = "0.9", default-features = false, features = [
    "stable-api-compiled-fallback",
] }
